# decentralized-game-of-life

./: .travis.yml  Cargo.toml  LICENSE_MIT  README.md  index.js
src/: lib.rs
www/: README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
