[package]
name = "wasm-game-of-life-tutorial"
version = "0.1.0"
authors = ["Ryan <ryanswrt@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"
smart-contract = "0.2.0"
smart-contract-macros = "0.2.0"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

